Fix T78533: Skip image texture if image filepath is empty